tests/snapshots/cog__cog_extend_include_gates_configured_non_markdown_files-2.snap
---
source: tests/cog.rs
info:
  program: aigarden
  args:
    - cog
    - "--write"
---
success: true
exit_code: 0
----- stdout -----
updated .codex/agents/auditor.toml

----- stderr -----
