tests/snapshots/cog__cog_extend_include_glob_matching_no_file_is_a_tool_error.snap
---
source: tests/cog.rs
info:
  program: aigarden
  args:
    - cog
    - "--check"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
aigarden: `cog-fresh.extend-include` glob `.codex/agent/*.toml` matches no file
