tests/snapshots/cog__cog_failing_generator_is_a_tool_error.snap
---
source: tests/cog.rs
info:
  program: aigarden
  args:
    - cog
    - "--check"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
aigarden: doc.md: cog generator `sh` failed: cog shell command `exit 3` exited with exit status: 3
