tests/snapshots/cog__cog_file_tree_contents.snap
---
source: tests/cog.rs
expression: "fs::read_to_string(dir.path().join(\"doc.md\")).unwrap()"
---
<!-- aigarden:cog file-tree src -->
a.rs
c.rs
nested/
  b.rs
<!-- aigarden:end -->
