tests/snapshots/cog__cog_file_tree_renders_a_directory_tree.snap
---
source: tests/cog.rs
info:
  program: aigarden
  args:
    - cog
    - "--write"
---
success: true
exit_code: 0
----- stdout -----
updated doc.md

----- stderr -----
