tests/snapshots/cog__cog_first_sentences_projects_the_glossary.snap
---
source: tests/cog.rs
info:
  program: aigarden
  args:
    - cog
    - "--write"
---
success: true
exit_code: 0
----- stdout -----
updated SHORT.md

----- stderr -----
