tests/snapshots/cog__cog_fresh_surfaces_in_a_check_run.snap
---
source: tests/cog.rs
info:
  program: aigarden
  args:
    - check
---
success: false
exit_code: 1
----- stdout -----
error[cog-fresh]: cog block `sh` is out of date — run `aigarden cog --write`
 --> doc.md:3:1
  |
3 | <!-- aigarden:cog sh "echo hello" -->
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
aigarden: 1 finding

----- stderr -----
