tests/snapshots/cog__cog_index_contents.snap
---
source: tests/cog.rs
expression: "fs::read_to_string(dir.path().join(\"docs/index.md\")).unwrap()"
---
# Index

<!-- aigarden:cog index docs/0*.md -->
- [First decision](0001-first.md) — Why we chose the first thing
- [Second](0002-second.md) — the second decision, briefly
<!-- aigarden:end -->
