tests/snapshots/cog__cog_index_lists_matching_files_with_glosses.snap
---
source: tests/cog.rs
info:
  program: aigarden
  args:
    - cog
    - "--write"
---
success: true
exit_code: 0
----- stdout -----
updated docs/index.md

----- stderr -----
